--- a/desafios/des12/estilo/style.css
+++ b/desafios/des12/estilo/style.css
@@ -56,17 +56,31 @@ section.normal {
 
 section.normal > pre {
     font-family: var(--fonte2);
+    padding-bottom: 2em;
 }
 
 section.imagem {
     background-color: rgb(37, 37, 37);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.377);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > pre {
-    width: 300px;
-    background-color: rgba(0, 0, 0, 0.308);
+    width: 350px;
+    background-color: rgba(0, 0, 0, 0.473);
     font-family: var(--fonte2);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.616);
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
 }
 
 footer {
